--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,7 @@ ul {
   background: wheat;
 }
 #welcome-section h1 {
+  font-family: "Rowdies", cursive;
   font-size: 64px;
 }
 #welcome-section h2 {
