set background img in welcome section

--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,7 @@ ul {
   background: wheat;
 }
 #welcome-section h1 {
+  background-image: url("https://i.ibb.co/nzSMHrT/Hawaii-Landing.jpg");
   font-family: "Rowdies", cursive;
   font-size: 64px;
 }
