--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@ body {
   margin: 0 auto;
   padding: 0;
   height: 40px;
-  width: 45px;
+  width: 55px;
 }
 ul {
   text-decoration: none;
@@ -17,12 +17,18 @@ ul {
   background: yellowgreen;
 }
 #welcome-section {
-  background: wheat;
+  background-image: url("https://www.technocrazed.com/wp-content/uploads/2015/12/Brick-wallaper-For-Background-30.jpg");
+  background-size: cover;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100vh;
+  background-color: #000;
+  background-repeat: no-repeat;
 }
 #welcome-section h1 {
-  background-image: url("https://i.ibb.co/nzSMHrT/Hawaii-Landing.jpg");
-  background-size: cover;
-  background-repeat: no-repeat;
   font-family: "Rowdies", cursive;
   font-size: 64px;
 }
@@ -30,21 +36,24 @@ ul {
   font-size: 40px;
 }
 .project-tile {
+  margin: 10px;
+  border-radius: 4px;
   background: gray;
 }
 .project-tile a {
+  text-decoration: none;
+}
+.project-tile a:hover {
+  color: orange;
+}
+.project-tile label {
   background: gray;
 }
 .project-tile img {
+  border-radius: 4px;
   height: 100%;
   width: 100%;
   background: gray;
-}
-.project-tile h3 {
-  background: honeydew;
-}
-#profile-link {
-  background: indianred;
 }
 #projects button {
   border: 2px solid indigo;
@@ -56,13 +65,10 @@ ul {
   background: lawngreen;
 }
 #contact h1 {
-  background: aqua;
+  background: lawngreen;
 }
 #contact h3 {
-  background: peru;
-}
-#contact a {
-  background: darkgoldenrod;
+  background: lawngreen;
 }
 #contact button {
   border: 2px solid indigo;
