--- a/styles.css
+++ b/styles.css
@@ -35,6 +35,10 @@ ul {
 #welcome-section h2 {
   font-size: 40px;
 }
+#projects-section {
+  width: 100%;
+  height: 100vh;
+}
 .project-tile {
   margin: 10px;
   border-radius: 4px;
@@ -61,7 +65,9 @@ ul {
   background: transparent;
   border-radius: 35% 0 35% 0;
 }
-#contact {
+#contact-section {
+  width: 100%;
+  height: 100vh;
   background: lawngreen;
 }
 #contact h1 {
