--- a/styles.css
+++ b/styles.css
@@ -10,12 +10,6 @@ body {
   height: 40px;
   width: 55px;
 }
-ul {
-  text-decoration: none;
-}
-.main {
-  background: yellowgreen;
-}
 #welcome-section {
   background-image: url("https://www.technocrazed.com/wp-content/uploads/2015/12/Brick-wallaper-For-Background-30.jpg");
   background-size: cover;
@@ -38,8 +32,11 @@ ul {
 #projects-section {
   width: 100%;
   height: 100vh;
+  margin-top: 5%;
+  margin-bottom: 5%;
 }
 .project-tile {
+  border: 2px solid gray;
   margin: 10px;
   border-radius: 4px;
   background: gray;
@@ -59,24 +56,26 @@ ul {
   width: 100%;
   background: gray;
 }
-#projects button {
+#projects-section button {
   border: 2px solid indigo;
   color: indigo;
   background: transparent;
   border-radius: 35% 0 35% 0;
 }
 #contact-section {
+  margin-top: 5%;
+  margin-bottom: 5%;
   width: 100%;
   height: 100vh;
   background: lawngreen;
 }
-#contact h1 {
+#contact-section h1 {
   background: lawngreen;
 }
-#contact h3 {
+#contact-section h3 {
   background: lawngreen;
 }
-#contact button {
+#contact-section button {
   border: 2px solid indigo;
   color: indigo;
   background: transparent;
