--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,9 @@ body {
   height: 40px;
   width: 55px;
 }
+.container {
+  padding: 0;
+}
 #welcome-section {
   background-image: url("https://www.technocrazed.com/wp-content/uploads/2015/12/Brick-wallaper-For-Background-30.jpg");
   background-size: cover;
@@ -32,8 +35,10 @@ body {
 #projects-section {
   width: 100%;
   height: 100vh;
-  margin-top: 5%;
   margin-bottom: 5%;
+}
+#projects-section h1 {
+  padding: 10px;
 }
 .project-tile {
   border: 2px solid gray;
