--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,12 @@
 body {
   text-align: center;
   color: #212121;
+  font-family: "Bungee Shade", cursive;
 }
 #navbar {
-  background: violet;
+  background: #f6f6f6 !important;
+  font-family: "VT323", monospace !important;
+  font-size: 20px !important;
 }
 #glasses-icon {
   margin: 0 auto;
@@ -15,7 +18,7 @@ body {
   padding: 0;
 }
 #welcome-section {
-  background-image: url("https://www.technocrazed.com/wp-content/uploads/2015/12/Brick-wallaper-For-Background-30.jpg");
+  background: #212121;
   background-size: cover;
   display: flex;
   flex-direction: column;
@@ -23,25 +26,20 @@ body {
   align-items: center;
   width: 100%;
   height: 100vh;
-  background-color: #000;
   background-repeat: no-repeat;
+  font-family: "VT323", monospace;
 }
-#welcome-section h1 {
+.welcome {
   margin: 10px;
+  padding: 10px;
+  color: lime;
   max-width: 800px;
-  font-family: "Rowdies", cursive;
-  font-size: 64px;
-  background: #fff;
-  border-radius: 10px;
-  opacity: 80%;
 }
-#welcome-section h2 {
-  margin: 10px;
-  max-width: 800px;
+.welcome h1 {
+  font-size: 20px;
+}
+.welcome h2 {
   font-size: 40px;
-  background: #fff;
-  border-radius: 10px;
-  opacity: 90%;
 }
 #projects-section {
   position: relative;
