--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,5 @@
 body {
+  background: #f6f6f6;
   text-align: center;
   color: #212121;
   font-family: "Bungee Shade", cursive;
@@ -47,9 +48,9 @@ body {
   margin-top: 5%;
   margin-bottom: 5%;
   left: 0;
-  border-bottom: 100px solid #fff;
+  border-bottom: 100px solid #f6f6f6;
   border-right: 100px solid #2b90a3;
-  border-top: 100px solid #fff;
+  border-top: 100px solid #f6f6f6;
 }
 .projex {
   position: relative;
@@ -62,8 +63,8 @@ body {
   margin-right: -100px;
   right: 0;
   border-bottom: 100px solid #2b90a3;
-  border-right: 100px solid #fff;
-  border-top: 100px solid #fff;
+  border-right: 100px solid #f6f6f6;
+  border-top: 100px solid #f6f6f6;
 }
 #projects-section h1 {
   padding: 10px;
@@ -85,7 +86,7 @@ body {
   border-radius: 4px;
   height: 100%;
   width: 100%;
-  background: gray;
+  background: F6F6F6;
 }
 #projects-section button {
   border: 3px solid indigo;
@@ -102,9 +103,9 @@ body {
   margin-top: 5%;
   margin-bottom: 5%;
   left: 0;
-  border-bottom: 100px solid #fff;
+  border-bottom: 100px solid #f6f6f6;
   border-left: 100px solid #2b90a3;
-  border-top: 100px solid #fff;
+  border-top: 100px solid #f6f6f6;
 }
 .contax {
   position: relative;
@@ -117,14 +118,11 @@ body {
   margin-left: -100px;
   left: 0;
   border-bottom: 100px solid #2b90a3;
-  border-left: 100px solid #fff;
-  border-top: 100px solid #fff;
+  border-left: 100px solid #f6f6f6;
+  border-top: 100px solid #f6f6f6;
 }
 #contact-section h1 {
-  background: lawngreen;
-}
-#contact-section h3 {
-  background: lawngreen;
+  background: lime;
 }
 #contact-section button {
   border: 3px solid indigo;
