--- a/styles.css
+++ b/styles.css
@@ -19,6 +19,16 @@ h1 {
   font-family: "Bungee Shade", cursive;
   padding: 10px;
 }
+button {
+  font-family: "VT323", monospace !important;
+  font-size: 20px;
+  margin: 10px;
+  padding: 5px;
+  border: 3px solid #212121;
+  color: #212121;
+  background: transparent;
+  border-radius: 35% 0 35% 0;
+}
 #welcome-section {
   background: #212121;
   background-size: cover;
@@ -32,10 +42,7 @@ h1 {
   font-family: "VT323", monospace;
 }
 .welcome {
-  margin: 10px;
-  padding: 10px;
   color: lime;
-  max-width: 800px;
 }
 .welcome h1 {
   font-size: 20px;
@@ -56,6 +63,7 @@ h1 {
   border-bottom: 100px solid #f6f6f6;
   border-right: 100px solid #2b90a3;
   border-top: 100px solid #f6f6f6;
+  font-family: "VT323", monospace;
 }
 .projex {
   position: relative;
@@ -88,13 +96,7 @@ h1 {
   border-radius: 4px;
   height: 100%;
   width: 100%;
-  background: F6F6F6;
-}
-#projects-section button {
-  border: 3px solid indigo;
-  color: indigo;
-  background: transparent;
-  border-radius: 35% 0 35% 0;
+  background: #f6f6f6;
 }
 #contact-section {
   position: relative;
@@ -108,6 +110,7 @@ h1 {
   border-bottom: 100px solid #f6f6f6;
   border-left: 100px solid #2b90a3;
   border-top: 100px solid #f6f6f6;
+  font-family: "VT323", monospace;
 }
 .contax {
   position: relative;
@@ -126,15 +129,18 @@ h1 {
 #contact-section h1 {
   background: lime;
 }
-#contact-section button {
-  font-family: "VT323", monospace !important;
-  border: 3px solid indigo;
-  color: indigo;
-  background: transparent;
-  border-radius: 35% 0 35% 0;
+#contact-section p {
+  background: lime;
+  height: 397px;
+  font-size: 30px;
+}
+.links {
+  background: lime;
+  height: 397px;
 }
 footer {
   padding: 5%;
+  font-size: 30px;
   background: transparent;
 }
 footer a {
