added then removed a font family

--- a/styles.css
+++ b/styles.css
@@ -140,8 +140,9 @@ button {
 }
 footer {
   padding: 5%;
-  font-size: 30px;
+  font-size: 20px;
   background: transparent;
+  font-family: "VT323", monospace !important;
 }
 footer a {
   color: #cf3f0c;
