--- a/styles.css
+++ b/styles.css
@@ -99,7 +99,7 @@ button {
 }
 #contact-section {
   position: relative;
-  height: 100%;
+  height: 100vh;
   width: 100%;
   background: #212121;
   float: left;
@@ -113,7 +113,7 @@ button {
 }
 .contax {
   position: relative;
-  height: 100%;
+  height: 100px;
   width: 100%;
   float: left;
   margin-top: -100px;
