--- a/styles.css
+++ b/styles.css
@@ -95,38 +95,34 @@ button:hover {
   margin-left: 10%;
   margin-right: 10%;
 }
-@media (max-width: 400px) {
+@media (min-width: 28.75em) {
   .project-tile {
-    margin: 10px;
-    min-height: 150px;
-    min-width: 300px;
-    border: 2px solid #212121;
+    margin: 5%;
     border-radius: 4px;
+  }
+  .project-tile a {
+    text-decoration: none;
+    color: lime;
+  }
+  .project-tile a:hover {
+    color: orange;
+  }
+  .project-tile img {
+    border-radius: 4px 4px 0 0;
+    height: 100%;
+    width: 100%;
+    border: 2px solid #212121;
+    background: #f6f6f6;
+  }
+  .project-tile label {
+    font-family: "VT323", monospace;
+    background: #212121;
+    width: 100%;
+    border-radius: 0 0 10px 10px;
+    font-size: 2rem;
   }
 }
 
-.project-tile a {
-  text-decoration: none;
-  color: lime;
-}
-.project-tile a:hover {
-  color: orange;
-}
-.project-tile img {
-  border-radius: 4px;
-  height: 100%;
-  width: 100%;
-  background: #f6f6f6;
-}
-.project-tile label {
-  font-family: "VT323", monospace;
-  background: #212121;
-  width: 400px;
-  margin-left: -2px;
-  border: 2px solid #212121;
-  border-radius: 0 0 10px 10px;
-  font-size: 2rem;
-}
 #projects-section button {
   margin-top: 5%;
 }
@@ -136,30 +132,30 @@ button:hover {
     font-family: "VT323", monospace;
     padding-top: 5%;
   }
+  #about-me {
+    background: lime;
+    margin-left: 40%;
+    margin-bottom: 5%;
+    border-radius: 10px;
+    box-shadow: -30px 30px 0 3px #212121;
+  }
+  #about-me h1 {
+    border-bottom: 2px solid #212121;
+  }
+  #about-me p {
+    font-size: 3rem;
+  }
+  #my-links {
+    background: lime;
+    border-radius: 10px;
+    margin-left: 10%;
+    box-shadow: 30px 30px 0 3px #212121;
+  }
+  #my-links h1 {
+    border-bottom: 2px solid #212121;
+  }
 }
 
-#about-me {
-  background: lime;
-  margin-left: 40%;
-  margin-bottom: 5%;
-  border-radius: 10px;
-  box-shadow: -30px 30px 0 3px #212121;
-}
-#about-me h1 {
-  border-bottom: 2px solid #212121;
-}
-#about-me p {
-  font-size: 3rem;
-}
-#my-links {
-  background: lime;
-  border-radius: 10px;
-  margin-left: 10%;
-  box-shadow: 30px 30px 0 3px #212121;
-}
-#my-links h1 {
-  border-bottom: 2px solid #212121;
-}
 /*Footer*/
 footer {
   padding-top: 7%;
