--- a/styles.css
+++ b/styles.css
@@ -87,8 +87,9 @@ h1 {
 #projects-section h1 {
   font-size: 6rem;
   border-bottom: 2px solid #212121;
-  margin-left: 10%;
-  margin-right: 10%;
+  margin-left: 15%;
+  margin-right: 15%;
+  margin-bottom: 1%;
 }
 .project-tile {
   margin: 5%;
