--- a/styles.css
+++ b/styles.css
@@ -86,10 +86,12 @@ h1 {
 }
 #projects-section h1 {
   font-size: 6rem;
-  border-bottom: 2px solid #212121;
+  margin-bottom: 1%;
+}
+#projects-section hr {
+  border-top: 2px solid #212121;
   margin-left: 15%;
   margin-right: 15%;
-  margin-bottom: 1%;
 }
 .project-tile {
   margin: 5%;
