--- a/styles.css
+++ b/styles.css
@@ -102,7 +102,7 @@ h1 {
 }
 .project-tile {
   margin: 5%;
-  height: 60%;
+  height: 200px;
   border-radius: 10px;
   background: #212121;
 }
@@ -142,7 +142,9 @@ h1 {
 button {
   font-family: "VT323", monospace !important;
   font-size: 3rem;
+
   margin: 3%;
+  margin-top: 8%;
   padding: 5px;
   border: 5px solid #212121;
   color: #212121;
