--- a/styles.css
+++ b/styles.css
@@ -93,16 +93,9 @@ h1 {
   margin-left: 15%;
   margin-right: 15%;
 }
-#projects .equals {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  flex-wrap: wrap;
-}
+
 .project-tile {
   margin: 1em;
-  height: 200px;
   border-radius: 10px;
   background: #212121;
 }
@@ -114,7 +107,7 @@ h1 {
   color: #f6f6f6;
 }
 .project-tile img {
-  height: 100%;
+  max-height: 200px;
   width: 100%;
   border: 2px solid #212121;
   border-radius: 10px 10px 0 0;
