--- a/styles.css
+++ b/styles.css
@@ -107,16 +107,17 @@ h1 {
   color: #f6f6f6;
 }
 .project-tile img {
-  max-height: 200px;
-  width: 100%;
+  height: 20em;
+  width: 25em;
+  padding-top: 3em;
   border: 2px solid #212121;
   border-radius: 10px 10px 0 0;
   opacity: 85%;
   filter: grayscale(100%);
 }
 .project-tile img:hover {
-  height: 100%;
-  width: 100%;
+  height: 20em;
+  width: 25em;
   border: 2px solid #212121;
   border-radius: 10px 10px 0 0;
   opacity: 100%;
